[package]
name = "palantir-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures-util = "0.3.30"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread", "net"] }
tokio-tungstenite = "0.23.1"
toml = "0.8.14"
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
webpki-roots = "0.26.3"
